issues
Problem invoking WLST - Traceback (innermost last):
  (no code object) at line 0
  File "/opt/oms-install/start_wls_infra.py", line 381
            )
             ^
SyntaxError: invalid syntax
